@@ -85,6 +85,7 @@ extern int b_builtin(int, char*[],Shbltin_t*);
 extern int b_cd(int, char*[],Shbltin_t*);
 extern int b_command(int, char*[],Shbltin_t*);
 extern int b_getopts(int, char*[],Shbltin_t*);
+extern int b_hash(int, char*[],Shbltin_t*);
 extern int b_hist(int, char*[],Shbltin_t*);
 extern int b_let(int, char*[],Shbltin_t*);
 extern int b_read(int, char*[],Shbltin_t*);
@@ -159,6 +160,7 @@ extern const char sh_optgetopts[];
 extern const char sh_optbg[];
 extern const char sh_optdisown[];
 extern const char sh_optfg[];
+extern const char sh_opthash[];
 extern const char sh_opthist[];
 extern const char sh_optjobs[];
 extern const char sh_optkill[];
